Updated the pages used in index.html
Updated various aspects of each reference page linked to in index.html
enabling the page files to properly communicate to one another.

I also updated the content of each page to correctly display the
desired content.

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
         <img src="./images/kitchen.jpeg" alt="picture of a kitchen" width="800" height="600">
         <h2>List of Available Recipes</h2>
         <ul>
-            <li>Creamy Bacon Pasta Bake</li>
-            <li>Alfredo Gnocchi Bake</li>
-            <li>Baked Mac & Cheese</li>
+            <li><a href="./pages/bacon-pasta.html">Creamy Bacon Pasta Bake</a></li>
+            <li><a href="./pages/gnocchi.html">Alfredo Gnocchi Bake</a></li>
+            <li><a href="./pages/mac-cheese.html">Baked Mac & Cheese</a></li>
         </ul>
     </body>
 </html>
