--- a/pages/bacon-pasta.html
+++ b/pages/bacon-pasta.html
@@ -8,6 +8,8 @@
     <body>
         <h1>Creamy Bacon Pasta Bake</h1>
         <img src="../images/bacon-pasta.jpg" alt="Picture of a dish called Creamy Bacon Pasta Bake" width="700" height="600">
+        <p>With minimal prep and no stovetop boiling required, this hearty, flavor-packed dinner comes together in just over an hour. 
+            Whether you’re craving a cozy family meal or a fuss-free dish that’s sure to impress guests, this pasta bake has you covered. </p>
         <h2>Recipe Information</h2>
         <ul>
             <li>Prep Time: 10 minutes</li>
