--- a/pages/mac-cheese.html
+++ b/pages/mac-cheese.html
@@ -8,6 +8,9 @@
     <body>
         <h1>Baked Mac & Cheese</h1>
         <img src="../images/baked-mac-cheese.jpg" alt="Picture of the dish Baked Mac & Cheese" width="700" height="600">
+        <p>You'll love Phyllis's homemade baked mac & cheese. It begins with a stovetop cheese sauce stirred with elbow macaroni, 
+            and finishes in the oven with more Cheddar and seasoned breadcrumbs baked on top. There's also a version with sauteed shrimp 
+            that you really must try.</p>
         <h2>Recipe Information</h2>
         <ul>
             <li>Prep Time: 20 minutes</li>
